fix hobo in UUID

--- a/docker-compose-no-traefik.yml
+++ b/docker-compose-no-traefik.yml
@@ -8,8 +8,8 @@ services:
       - "HL_USER_USERNAME=ttyoperator"
       - "HL_USER_PASSWORD=compass"
     env_file:
-      - ./UUID-hobo.env
+      - ./UUID.env
     volumes:
-      - ./UUID-hobo.gn:/goldnugget/UUID-hobo.gn
+      - ./UUID.gn:/goldnugget/UUID.gn
     ports:
       - 7681:7681
